2007-09-20  Stephen Deasey  <sdeasey@users.sf.net>

	* doc/src/man3/Ns_Sls.man: Fix stray curly-bracket and add extra markup
	around types, args etc.

2007-09-14  Stephen Deasey  <sdeasey@users.sf.net>

	* include/ns.h:
	* nsd/log.c: Drop the idea of maxloglevel auxiliary logging levels and
	instead add a new Ns_CreateLogSeverity() which creates a named severity
	level. C code still passes round an integer severity level, the severity
	name appears in the log file.

	ns_logctl severity can create new severity levels on the Tcl side and
	enable/disable them individually, unlike the old scheme in which to
	enable level 100 levels 0-99 also had to be enabled. A reasonable number
	of integer levels are still supported for backwards compatibility.

	ns_logctl severities lists all created severites.

	* nsd/callbacks.c:
	* nsd/tclinit.c: Update after renaming Ns_LogLevel() to
	Ns_LogSeverityEnabled().

	* doc/src/mann/ns_log.man:
	* tests/ns_log.test: Updated.

	* nsd/log.c: Call filters 'filters' instead of callbacks. Remove some
	redundant wrapper routines. Shuffle the code around.

	* nsd/log.c:
	* tests/ns_log.test: Guard against disabling the Fatal log
	severity. Make sure that Fatal log messages are always flushed, even
	when 'hold' is active.

2007-09-12  Stephen Deasey  <sdeasey@users.sf.net>

	* doc/src/mann/ns_log.man:
	* doc/src/ns_log.man:
	* doc/src/ns_logctl.man:
	* doc/src/ns_logroll.man: Combine the error logging commands and move
	into place. Update.

	* nsd/nsmain.c (CmdThread): Set the thread name for the command shell
	thread so that log messages are less ugly.

2007-09-11  Stephen Deasey  <sdeasey@users.sf.net>

	* nsd/nsd.h:
	* nsd/tclresp.c: Re-enable the ability to use ns_write to manually
	construct headers or some other non-HTTP response. It does not now
	auto-generate a set of headers on first write -- ns_headers must be
	called first.

	* doc/src/mann/ns_return.man:
	* doc/src/mann/ns_write.man: Split ns_write, ns_headers and