@@ -1,3 +1,8 @@
+2007-09-25  Vlad Seryakov  <seryakov@users.sf.net>
+
+	* nsd/tcljob.c: Make sure -jobid parameters ignored if empty string is given. also
+	add error message to the log for detached and failed jobs                
+
 2007-09-20  Stephen Deasey  <sdeasey@users.sf.net>
 
 	* doc/src/man3/Ns_Sls.man: Fix stray curly-bracket and add extra markup
